--- a/app/views/manage/questionnaire-has/v3/constraints/affected-listed-building-details.html
+++ b/app/views/manage/questionnaire-has/v3/constraints/affected-listed-building-details.html
@@ -32,7 +32,7 @@
 
     {{ govukInput({
       label: {
-        text: "Add the 7 digit entry number"
+        text: "Seven digit number"
       },
       classes: "govuk-input--width-10",
       id: "historicenglandsearchnumber",
