--- a/app/views/manage/questionnaire-has/v3/constraints/conservation-upload.html
+++ b/app/views/manage/questionnaire-has/v3/constraints/conservation-upload.html
@@ -3,13 +3,15 @@
 {% set title = 'Upload conservation map and guidance' %}
 
 {% block questions %}
+
+  
   <h1 class="govuk-heading-l">
     {{ title }}
   </h1>
 
-  <p class="govuk-body">
+  <!-- <p class="govuk-body">
     <a href="https://magic.defra.gov.uk/magicmap.aspx" target="_blank" class="govuk-link">Link to Magic Maps (opens in new tab)</a>
-  </p>
+  </p> -->
 
   {% set uploadHtml %}
     {{ govukFileUpload({
