--- a/app/views/manage/questionnaire-has/v3/consultation/other-parties-upload.html
+++ b/app/views/manage/questionnaire-has/v3/consultation/other-parties-upload.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Upload representations' %}
+{% set title = 'Upload the representations' %}
 
 {% block questions %}
   <h1 class="govuk-heading-l">
