--- a/app/views/manage/questionnaire-has/v3/site-access/neighbours-address.html
+++ b/app/views/manage/questionnaire-has/v3/site-access/neighbours-address.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Tell us the address of the neighbouring site' %}
+{% set title = 'Tell us the address of the affected neighbour' %}
 
 {% block questions %}
 
