--- a/app/views/manage/questionnaire-has/v3/constraints/appropriate.html
+++ b/app/views/manage/questionnaire-has/v3/constraints/appropriate.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Do you think the appeal type is appropriate?' %}
+{% set title = 'Is this the correct type of appeal?' %}
 
 {% block questions %}
   {{ govukRadios({
