--- a/app/views/manage/questionnaire-has/v3/constraints/conservation-check.html
+++ b/app/views/manage/questionnaire-has/v3/constraints/conservation-check.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Is the site in or next to a conservation area?' %}
+{% set title = 'Is the site in, or does it affect a conservation area?' %}
 
 {% block questions %}
   {{ govukRadios({
