--- a/app/views/manage/questionnaire-has/v3/notified/notified-who.html
+++ b/app/views/manage/questionnaire-has/v3/notified/notified-who.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Who was notified' %}
+{% set title = 'Who did you notify about this application?' %}
 
 {% block questions %}
   <h1 class="govuk-heading-l">
@@ -8,8 +8,17 @@
   </h1>
 
   <p class="govuk-body">
-      This should include internal consultees.
+    Provide us with a document that lists:
   </p>
+
+  <ul class="govuk-list govuk-list--bullet">
+    <li>
+      the names and addresses of any neighbours that you contacted
+    </li>
+    <li>
+      any internal consultees, external specialists, their contact details and why they were contacted (their address is not needed)
+    </li>
+  </ul>
 
   {% set uploadHtml %}
     {{ govukFileUpload({
