--- a/app/views/manage/questionnaire-has/v3/appeal-process/other-appeals.html
+++ b/app/views/manage/questionnaire-has/v3/appeal-process/other-appeals.html
@@ -86,13 +86,11 @@
       items: [
         {
           html: 'Yes',
-          value: 'Yes',
-          checked: checked('other-appeals','Yes')
+          value: 'Yes'
         },
         {
           html: 'No',
-          value: 'No',
-          checked: checked('other-appeals','No')
+          value: 'No'
         }
       ]
     }) }}
