--- a/app/views/manage/questionnaire-has/v3/site-access/neighbours.html
+++ b/app/views/manage/questionnaire-has/v3/site-access/neighbours.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Neighbouring site' %}
+{% set title = 'Neighbouring site added' %}
 
 {% set prototypeLinks = [
   {
@@ -86,13 +86,11 @@
       items: [
         {
           html: 'Yes',
-          value: 'Yes',
-          checked: checked('add-neighbours','Yes')
+          value: 'Yes'
         },
         {
           html: 'No',
-          value: 'No',
-          checked: checked('add-neighbours','No')
+          value: 'No'
         }
       ]
     }) }}
