--- a/app/views/manage/questionnaire-has/index.html
+++ b/app/views/manage/questionnaire-has/index.html
@@ -21,15 +21,38 @@
       {{ title }}
     </h1>
 
-    <section class="govuk-!-margin-bottom-6">
+    {% set version = "3" %}
+    <h2 class="govuk-heading-m">
+      Version {{version}}
+      {{ govukTag({
+        classes: 'govuk-tag--yellow govuk-!-margin-left-2',
+        text: 'In progress'
+      }) }}
+    </h2>
+
+    <!-- <p>
+      Researched July 2023<br>
+      <a href="https://pins-ds.atlassian.net/l/cp/m5xUUVAn" class="govuk-link">
+        Confluence user research notes
+      </a>
+    </p> -->
+
+    <p class="govuk-!-margin-bottom-2">Changes:</p>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>
+        Content updates following user research
+      </li>
+    </ul>
+
+    {{ govukButton({
+      html: 'View prototype',
+      href: 'v'+version+'/task-list',
+      isStartButton: true
+    }) }}
+
+    {% set v2HTML %}
+
       {% set version = "2" %}
-      <h2 class="govuk-heading-m">
-        Version {{version}}
-        {{ govukTag({
-          classes: 'govuk-tag--blue govuk-!-margin-left-2',
-          text: 'Researched'
-        }) }}
-      </h2>
 
       <p>
         Researched July 2023<br>
@@ -51,7 +74,7 @@
         isStartButton: true
       }) }}
 
-    </section>
+    {% endset -%}
 
     {% set v1HTML %}
 
@@ -74,9 +97,17 @@
 
     {{ govukAccordion({
       id: 'previous',
-      classes: 'govuk-!-margin-top-9',
+      classes: 'govuk-!-margin-top-5',
       items: [
 
+        {
+          heading: {
+            html: 'Version 2 <strong class="govuk-tag govuk-tag--blue govuk-!-margin-left-2">Researched</strong>'
+          },
+          content: {
+            html: v2HTML
+          }
+        },
         {
           heading: {
             html: 'Version 1 <strong class="govuk-tag govuk-tag--yellow govuk-!-margin-left-2">In progress</strong>'
