Content updates for HAS LPAQ

--- a/app/views/manage/appeals/v5/index.html
+++ b/app/views/manage/appeals/v5/index.html
@@ -83,7 +83,7 @@
             classes: 'govuk-!-width-one-quarter'
           },
           {
-            html: 'Application number',
+            html: 'Reference number',
             classes: 'govuk-!-width-one-third'
           },
           {
@@ -136,7 +136,7 @@
               html: 'Appeal number'
             },
             {
-              html: 'Application number'
+              html: 'Reference number'
             },
             {
               html: 'Deadline'
@@ -275,7 +275,7 @@
               html: 'Appeal number'
             },
             {
-              html: 'Application number'
+              html: 'Reference number'
             },
             {
               html: 'Deadline'
