--- a/app/views/manage/questionnaire-has/v3/consultation/other-parties-check.html
+++ b/app/views/manage/questionnaire-has/v3/consultation/other-parties-check.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Did you receive representations from other parties?' %}
+{% set title = 'Did you receive representations from members of the public or other parties?' %}
 
 {% block questions %}
   {{ govukRadios({
