--- a/app/views/manage/questionnaire-has/v3/site-access/neighbours.html
+++ b/app/views/manage/questionnaire-has/v3/site-access/neighbours.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Neighbouring site added' %}
+{% set title = 'Affected neighbour added' %}
 
 {% set prototypeLinks = [
   {
@@ -78,7 +78,7 @@
       name: 'add-neighbours',
       fieldset: {
         legend: {
-          html: 'Do you want to add another neighbouring site?',
+          html: 'Do you want to add another affected neighbour?',
           classes: 'govuk-fieldset__legend--m',
           isPageHeading: false
         }
