--- a/app/views/manage/questionnaire-has/v3/task-list__constraints.html
+++ b/app/views/manage/questionnaire-has/v3/task-list__constraints.html
@@ -24,7 +24,7 @@
 
       {
         key: {
-          html: 'Is this appeal type appriopriate?'
+          html: 'Is this the correct type of appeal?'
         },
         value: {
           html: data['appropriate'] or 'Yes'
