--- a/app/views/manage/questionnaire-has/v3/confirmation.html
+++ b/app/views/manage/questionnaire-has/v3/confirmation.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Questionnaire completed' %}
+{% set title = 'Questionnaire submitted' %}
 {% set back = false %}
 
 {% block beforeContent %}
