HAS LPAQ adding captions for question pages + logic for questionnaire banner

--- a/app/views/manage/questionnaire-has/v2/appeal-process/extra-conditions.html
+++ b/app/views/manage/questionnaire-has/v2/appeal-process/extra-conditions.html
@@ -31,7 +31,7 @@
       {
         html: 'Yes',
         value: 'Yes',
-        checked: checked('extra-conditions-check','Yes'),
+        checked: checked('extra-conditions','Yes'),
         conditional: {
           html: extraConditions
         }
