--- a/app/views/manage/questionnaire-has/v3/appeal-process/other-appeal-reference.html
+++ b/app/views/manage/questionnaire-has/v3/appeal-process/other-appeal-reference.html
@@ -3,7 +3,9 @@
 {% set title = 'Enter an appeal reference number' %}
 
 {% block questions %}
-
+  <span class="govuk-caption-l">
+    6. Appeal process
+  </span>
   {{ govukInput({
     label: {
       text: title,
