--- a/app/views/manage/questionnaire-has/v3/appeal-process/other-appeals-check.html
+++ b/app/views/manage/questionnaire-has/v3/appeal-process/other-appeals-check.html
@@ -4,6 +4,9 @@
 
 {% block questions %}
 
+  <span class="govuk-caption-l">
+    6. Appeal process
+  </span>
   {{ govukRadios({
     idPrefix: 'other-appeals-radio',
     name: 'other-appeals-radio',
