--- a/app/views/manage/questionnaire-has/v3/confirmation.html
+++ b/app/views/manage/questionnaire-has/v3/confirmation.html
@@ -36,7 +36,7 @@
         We will review your evidence and will contact you if we need any further information.</p>
 
       <p class="govuk-body">
-        <a href="../../appeals/v4/??no-appeals=false&questionnaire=complete" class="govuk-link--no-visited-state">View your planning appeals</a>
+        <a href="../../appeals/v5/?questionnaire=complete&questionnaire-banner=yes" class="govuk-link--no-visited-state">View your planning appeals</a>
       </p>
 
     </div>
