--- a/app/views/manage/questionnaire-has/v3/constraints/affected-listed-building-check.html
+++ b/app/views/manage/questionnaire-has/v3/constraints/affected-listed-building-check.html
@@ -3,6 +3,9 @@
 {% set title = 'Do the plans affect the setting of a listed building or site?' %}
 
 {% block questions %}
+  <span class="govuk-caption-l">
+    1. Constraints, designations and other issues
+  </span>
   {{ govukRadios({
     idPrefix: 'affected-listed-building-check',
     name: 'affected-listed-building-check',
