--- a/app/views/manage/questionnaire-has/v3/constraints/affected-listed-building-details.html
+++ b/app/views/manage/questionnaire-has/v3/constraints/affected-listed-building-details.html
@@ -4,6 +4,9 @@
 
 {% block questions %}
   <div class="govuk-form-group">
+    <span class="govuk-caption-l">
+      1. Constraints, designations and other issues
+    </span>
     <h1 class="govuk-label-wrapper">
       <label class="govuk-label govuk-label--l" for="listedplanning">
         {{ title }}
