--- a/app/views/manage/questionnaire-has/v3/constraints/appropriate.html
+++ b/app/views/manage/questionnaire-has/v3/constraints/appropriate.html
@@ -3,6 +3,9 @@
 {% set title = 'Is this the correct type of appeal?' %}
 
 {% block questions %}
+  <span class="govuk-caption-l">
+    1. Constraints, designations and other issues
+  </span>
   {{ govukRadios({
     idPrefix: 'appropriate',
     name: 'appropriate',
