--- a/app/views/manage/questionnaire-has/v3/constraints/conservation-check.html
+++ b/app/views/manage/questionnaire-has/v3/constraints/conservation-check.html
@@ -3,6 +3,9 @@
 {% set title = 'Is the site in, or does it affect a conservation area?' %}
 
 {% block questions %}
+  <span class="govuk-caption-l">
+    1. Constraints, designations and other issues
+  </span>
   {{ govukRadios({
     idPrefix: 'conservation-check',
     name: 'conservation-check',
