--- a/app/views/manage/questionnaire-has/v3/constraints/conservation-upload.html
+++ b/app/views/manage/questionnaire-has/v3/constraints/conservation-upload.html
@@ -3,8 +3,9 @@
 {% set title = 'Upload conservation map and guidance' %}
 
 {% block questions %}
-
-  
+  <span class="govuk-caption-l">
+    1. Constraints, designations and other issues
+  </span>
   <h1 class="govuk-heading-l">
     {{ title }}
   </h1>
