--- a/app/views/manage/questionnaire-has/v3/constraints/green-belt.html
+++ b/app/views/manage/questionnaire-has/v3/constraints/green-belt.html
@@ -3,6 +3,9 @@
 {% set title = 'Is the site in a green belt?' %}
 
 {% block questions %}
+  <span class="govuk-caption-l">
+    1. Constraints, designations and other issues
+  </span>
   {{ govukRadios({
     idPrefix: 'green-belt',
     name: 'green-belt',
