--- a/app/views/manage/questionnaire-has/v3/consultation/other-parties-check.html
+++ b/app/views/manage/questionnaire-has/v3/consultation/other-parties-check.html
@@ -3,6 +3,9 @@
 {% set title = 'Did you receive representations from members of the public or other parties?' %}
 
 {% block questions %}
+  <span class="govuk-caption-l">
+    3. Consultation responses and representations
+  </span>
   {{ govukRadios({
     idPrefix: 'other-parties-check',
     name: 'other-parties-check',
