--- a/app/views/manage/questionnaire-has/v3/notified/notified-how.html
+++ b/app/views/manage/questionnaire-has/v3/notified/notified-how.html
@@ -3,7 +3,9 @@
 {% set title = 'How did you notify people about the application?' %}
 
 {% block questions %}
-
+  <span class="govuk-caption-l">
+    2. Notifying relevant parties of the application
+  </span>
   {{ govukCheckboxes({
     idPrefix: 'notified-how',
     name: 'notified-how',
