--- a/app/views/manage/questionnaire-has/v3/site-access/health-and-safety.html
+++ b/app/views/manage/questionnaire-has/v3/site-access/health-and-safety.html
@@ -15,7 +15,9 @@
       }
     }) }}
   {% endset -%}
-
+  <span class="govuk-caption-l">
+    5. Site access
+  </span>
   <h1 class="govuk-heading-l">
     {{ title }}
   </h1>
