--- a/app/views/manage/questionnaire-has/v3/site-access/neighbours-address.html
+++ b/app/views/manage/questionnaire-has/v3/site-access/neighbours-address.html
@@ -5,7 +5,9 @@
 {% block questions %}
 
 <!-- <p class="govuk-hint">This should match the address on the application to the local planning authority</p> -->
-
+  <span class="govuk-caption-l">
+    5. Site access
+  </span>
   <h1 class='govuk-heading-l'>
     {{ title }}
   </h1>
