--- a/app/views/manage/questionnaire-has/v3/site-access/neighbours-land.html
+++ b/app/views/manage/questionnaire-has/v3/site-access/neighbours-land.html
@@ -5,6 +5,9 @@
 <!-- Will the reasons for refusal / grounds of appeal require the Inspector to access a neighbour’s land? -->
 
 {% block questions %}
+  <span class="govuk-caption-l">
+    5. Site access
+  </span>
   {{ govukRadios({
     idPrefix: 'neighbours-land',
     name: 'neighbours-land',
