--- a/app/views/manage/questionnaire-has/v3/site-access/site-entry.html
+++ b/app/views/manage/questionnaire-has/v3/site-access/site-entry.html
@@ -3,7 +3,9 @@
 {% set title = "Might the inspector need access to the appellant’s land or property?" %}
 
 {% block questions %}
-
+  <span class="govuk-caption-l">
+    5. Site access
+  </span>
   {{ govukRadios({
     idPrefix: 'site-entry',
     name: 'site-entry',
