--- a/app/views/manage/questionnaire-has/v3/constraints/affected-listed-building-building.html
+++ b/app/views/manage/questionnaire-has/v3/constraints/affected-listed-building-building.html
@@ -9,6 +9,9 @@
     <div class="govuk-grid-row">
 
       <div class="govuk-grid-column-two-thirds">
+        <span class="govuk-caption-l">
+          1. Constraints, designations and other issues
+        </span>
         <h1 class="govuk-heading-l govuk-!-margin-bottom-0">
           {{ title }}
         </h1>
