--- a/app/views/manage/questionnaire-has/v3/constraints/affected-listed-buildings.html
+++ b/app/views/manage/questionnaire-has/v3/constraints/affected-listed-buildings.html
@@ -20,7 +20,9 @@
     <!-- appeal metadata -->
     <div class="govuk-grid-row govuk-!-margin-bottom-6">
       <div class="govuk-grid-column-two-thirds">
-
+        <span class="govuk-caption-l">
+          1. Constraints, designations and other issues
+        </span>
         <h1 class="govuk-heading-l">
           {{ title }}
         </h1>
