--- a/app/views/manage/questionnaire-has/v3/notified/letters-upload.html
+++ b/app/views/manage/questionnaire-has/v3/notified/letters-upload.html
@@ -3,6 +3,9 @@
 {% set title = 'Upload letters and emails that were sent to the neighbours' %}
 
 {% block questions %}
+  <span class="govuk-caption-l">
+    2. Notifying relevant parties of the application
+  </span>
   <h1 class="govuk-heading-l">
     {{ title }}
   </h1>
