--- a/app/views/manage/questionnaire-has/v3/notified/notified-who.html
+++ b/app/views/manage/questionnaire-has/v3/notified/notified-who.html
@@ -3,6 +3,9 @@
 {% set title = 'Who did you notify about this application?' %}
 
 {% block questions %}
+  <span class="govuk-caption-l">
+    2. Notifying relevant parties of the application
+  </span>
   <h1 class="govuk-heading-l">
     {{ title }}
   </h1>
