--- a/app/views/manage/questionnaire-has/v3/site-access/neighbours.html
+++ b/app/views/manage/questionnaire-has/v3/site-access/neighbours.html
@@ -20,7 +20,9 @@
     <!-- appeal metadata -->
     <div class="govuk-grid-row govuk-!-margin-bottom-6">
       <div class="govuk-grid-column-two-thirds">
-
+        <span class="govuk-caption-l">
+          5. Site access
+        </span>
         <h1 class="govuk-heading-l">
           {{ title }}
         </h1>
