HAS LPAQ extra conditions content

--- a/app/views/manage/questionnaire-has/v3/appeal-process/extra-conditions.html
+++ b/app/views/manage/questionnaire-has/v3/appeal-process/extra-conditions.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'New planning conditions' %}
+{% set title = 'Add new planning conditions to this appeal' %}
 
 {% block questions %}
 
@@ -45,7 +45,7 @@
     name: 'extra-conditions-check',
     fieldset: {
       legend: {
-        html: 'Do you want to add new planning conditions to this appeal?',
+        html: 'Are there any new conditions?',
         classes: 'govuk-fieldset__legend--m'
       }
     },
