HAS LPAQ research round II, removing the caption numbers, content updates, small version logic changes

--- a/app/views/manage/appeals/v5/index.html
+++ b/app/views/manage/appeals/v5/index.html
@@ -51,7 +51,7 @@
     {% endif %}
 
   </div>
-  <div class="govuk-grid-column-two-thirds">
+  <div class="govuk-grid-column-full">
 
     <h1 class="govuk-heading-xl">
       <span class="govuk-caption-xl">
@@ -61,7 +61,7 @@
       {{ title }}
     </h1>
 
-    <p class="govuk-body">
+    <p class="govuk-body govuk-!-margin-bottom-6">
       <a href="/manage/manage-users/v3/" class="govuk-link--no-visited-state">
         Add and remove users
       </a>
