--- a/app/views/manage/questionnaire-has/v3/appeal-process/other-appeal-reference.html
+++ b/app/views/manage/questionnaire-has/v3/appeal-process/other-appeal-reference.html
@@ -4,7 +4,7 @@
 
 {% block questions %}
   <span class="govuk-caption-l">
-    6. Appeal process
+    Appeal process
   </span>
   {{ govukInput({
     label: {
