--- a/app/views/manage/questionnaire-has/v3/appeal-process/other-appeals-check.html
+++ b/app/views/manage/questionnaire-has/v3/appeal-process/other-appeals-check.html
@@ -5,7 +5,7 @@
 {% block questions %}
 
   <span class="govuk-caption-l">
-    6. Appeal process
+    Appeal process
   </span>
   {{ govukRadios({
     idPrefix: 'other-appeals-radio',
