--- a/app/views/manage/questionnaire-has/v3/constraints/affected-listed-building-building.html
+++ b/app/views/manage/questionnaire-has/v3/constraints/affected-listed-building-building.html
@@ -10,7 +10,7 @@
 
       <div class="govuk-grid-column-two-thirds">
         <span class="govuk-caption-l">
-          1. Constraints, designations and other issues
+          Constraints, designations and other issues
         </span>
         <h1 class="govuk-heading-l govuk-!-margin-bottom-0">
           {{ title }}
