--- a/app/views/manage/questionnaire-has/v3/consultation/other-parties-upload.html
+++ b/app/views/manage/questionnaire-has/v3/consultation/other-parties-upload.html
@@ -4,7 +4,7 @@
 
 {% block questions %}
   <span class="govuk-caption-l">
-    3. Consultation responses and representations
+    Consultation responses and representations
   </span>
   <h1 class="govuk-heading-l">
     {{ title }}
