--- a/app/views/manage/questionnaire-has/v3/notified/notified-how.html
+++ b/app/views/manage/questionnaire-has/v3/notified/notified-how.html
@@ -4,7 +4,7 @@
 
 {% block questions %}
   <span class="govuk-caption-l">
-    2. Notifying relevant parties of the application
+    Notifying relevant parties of the application
   </span>
   {{ govukCheckboxes({
     idPrefix: 'notified-how',
