--- a/app/views/manage/questionnaire-has/v3/site-access/health-and-safety.html
+++ b/app/views/manage/questionnaire-has/v3/site-access/health-and-safety.html
@@ -16,7 +16,7 @@
     }) }}
   {% endset -%}
   <span class="govuk-caption-l">
-    5. Site access
+    Site access
   </span>
   <h1 class="govuk-heading-l">
     {{ title }}
