--- a/app/views/manage/questionnaire-has/v3/site-access/neighbours-land.html
+++ b/app/views/manage/questionnaire-has/v3/site-access/neighbours-land.html
@@ -6,7 +6,7 @@
 
 {% block questions %}
   <span class="govuk-caption-l">
-    5. Site access
+    Site access
   </span>
   {{ govukRadios({
     idPrefix: 'neighbours-land',
