--- a/app/views/manage/questionnaire-has/v3/site-access/neighbours.html
+++ b/app/views/manage/questionnaire-has/v3/site-access/neighbours.html
@@ -21,7 +21,7 @@
     <div class="govuk-grid-row govuk-!-margin-bottom-6">
       <div class="govuk-grid-column-two-thirds">
         <span class="govuk-caption-l">
-          5. Site access
+          Site access
         </span>
         <h1 class="govuk-heading-l">
           {{ title }}
@@ -36,7 +36,7 @@
 
             {
               key: {
-                text: 'Site 1 details'
+                text: 'Neighbour 1'
               },
               value: {
                 html: '172, York Road, Bedminster, Bristol, BS3 4AL'
@@ -53,7 +53,7 @@
             },
             {
               key: {
-                text: 'Site 2 details'
+                text: 'Neighbour 2'
               },
               value: {
                 html: '174, York Road, Bedminster, Bristol, BS3 4AL'
