--- a/app/views/manage/questionnaire-has/v3/site-access/site-entry.html
+++ b/app/views/manage/questionnaire-has/v3/site-access/site-entry.html
@@ -4,7 +4,7 @@
 
 {% block questions %}
   <span class="govuk-caption-l">
-    5. Site access
+    Site access
   </span>
   {{ govukRadios({
     idPrefix: 'site-entry',
