--- a/app/views/manage/questionnaire-has/v3/task-list__constraints.html
+++ b/app/views/manage/questionnaire-has/v3/task-list__constraints.html
@@ -75,7 +75,7 @@
       },
       {
         key: {
-          html: 'Listed buildings'
+          html: 'Listed 1'
         },
         value: {
           html: '<a href="#">'+(data['historicenglandsearchnumber'] or '1282050')+'</a>'+
