--- a/app/views/manage/questionnaire-has/v3/appeal-process/extra-conditions.html
+++ b/app/views/manage/questionnaire-has/v3/appeal-process/extra-conditions.html
@@ -5,7 +5,7 @@
 {% block questions %}
 
   <span class="govuk-caption-l">
-    6. Appeal process
+    Appeal process
   </span>
   <h1 class="govuk-heading-l">
     {{ title }}
