--- a/app/views/manage/questionnaire-has/v3/appeal-process/other-appeals.html
+++ b/app/views/manage/questionnaire-has/v3/appeal-process/other-appeals.html
@@ -21,7 +21,7 @@
     <div class="govuk-grid-row govuk-!-margin-bottom-6">
       <div class="govuk-grid-column-two-thirds">
         <span class="govuk-caption-l">
-          6. Appeal process
+          Appeal process
         </span>
         <h1 class="govuk-heading-l">
           {{ title }}
