--- a/app/views/manage/questionnaire-has/v3/constraints/affected-listed-building-check.html
+++ b/app/views/manage/questionnaire-has/v3/constraints/affected-listed-building-check.html
@@ -4,7 +4,7 @@
 
 {% block questions %}
   <span class="govuk-caption-l">
-    1. Constraints, designations and other issues
+    Constraints, designations and other issues
   </span>
   {{ govukRadios({
     idPrefix: 'affected-listed-building-check',
