--- a/app/views/manage/questionnaire-has/v3/constraints/conservation-upload.html
+++ b/app/views/manage/questionnaire-has/v3/constraints/conservation-upload.html
@@ -4,7 +4,7 @@
 
 {% block questions %}
   <span class="govuk-caption-l">
-    1. Constraints, designations and other issues
+    Constraints, designations and other issues
   </span>
   <h1 class="govuk-heading-l">
     {{ title }}
