--- a/app/views/manage/questionnaire-has/v3/consultation/other-parties-check.html
+++ b/app/views/manage/questionnaire-has/v3/consultation/other-parties-check.html
@@ -4,7 +4,7 @@
 
 {% block questions %}
   <span class="govuk-caption-l">
-    3. Consultation responses and representations
+    Consultation responses and representations
   </span>
   {{ govukRadios({
     idPrefix: 'other-parties-check',
