--- a/app/views/manage/questionnaire-has/v3/task-list__site-access.html
+++ b/app/views/manage/questionnaire-has/v3/task-list__site-access.html
@@ -48,7 +48,7 @@
       },
       {
         key: {
-          html: 'Could a neighbouring site be affected?'
+          html: 'Do the plans affect any neighbours?'
         },
         value: {
           html: 'Yes' if data['neighbours-land'] == 'Yes' else 'No'
@@ -73,7 +73,7 @@
       },
       {
         key: {
-          html: 'Neighbouring site 1 address'
+          html: 'Neighbour 1'
         },
         value: {
           html: ('172, York Road')+
@@ -93,31 +93,6 @@
             if data['neighbours-address-complete'] else
             {
               href: 'site-access/neighbours-address',
-              html: 'Answer'
-            }
-          ]
-        }
-      } if data['neighbours-land'] == 'Yes',
-      {
-        key: {
-          html: 'Neighbouring site 1 contact'
-        },
-        value: {
-          html: ('Sam Fisher')+
-                ('<br>01179123456')
-        } if data['neighbours-contact-complete'] else
-        {
-          html: '<span class="govuk-hint">Not started</span>'
-        },
-        actions: {
-          items: [
-            {
-              href: 'site-access/neighbours-contact-details?cya=true',
-              html: 'Change'
-            }
-            if data['neighbours-contact-complete'] else
-            {
-              href: 'site-access/neighbours-contact-details',
               html: 'Answer'
             }
           ]
